# cai

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ai-test  fen-test  init-submodules.sh  test-ai.cai
source/: CMakeLists.txt  cai.cpp  cai.h
source/ai/: CMakeLists.txt  ai-player.cpp  ai-player.h  ai-population.cpp  ai-population.h  ai-trainer.cpp  ai-trainer.h  ai.cpp  ai.h  cai-population.cpp  cai-population.h  neural-network.cpp  neural-network.h  random-player.h
source/game/: CMakeLists.txt  board.cpp  board.h  chess-board-structs.hpp  chess-board.cpp  chess-board.h  game.cpp  game.h  piece-type.h  piece.h  player.cpp  player.h  tile.h
source/min-max-ai/: CMakeLists.txt  chess-board-evaluator.hpp  min-max-ai-player.cpp  min-max-ai-player.h  min-max-tree.h
source/neural-net-ai/: CMakeLists.txt  cai-population.cpp  cai-population.h  nnai-player.cpp  nnai-player.h  nnai-trainer.cpp  nnai-trainer.h
source/tools/: CMakeLists.txt  board-hashing.hpp  random-generator.h  testing.cpp  testing.h  util.cpp  util.h
tests/: CMakeLists.txt  ai-player-test.cpp  ai-test.cpp  ai-tests.cpp  board-hashing-test.cpp  chess-board-test.cpp  fen-test.cpp  game-ai.cpp  min-max-ai-test.cpp  optimal-seed.cpp  performance-test.cpp  perft-test.cpp  trainer-test.cpp
vs-project/: cai.sln  cai.vcxproj  cai.vcxproj.filters
